--- a/recipe-book/src/app/core/footer/footer.component.html
+++ b/recipe-book/src/app/core/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<footer>
+    <section class="site-footer">
+        <p>Made by Georgi Georgiev</p>
+        <p>All Rights Reserved</p>
+    </section>
+</footer>
