Created Home Component
Created Home Component and added styles to it.
Added routing for Home Component.

--- a/recipe-book/src/app/core/header/header.component.css
+++ b/recipe-book/src/app/core/header/header.component.css
@@ -20,6 +20,11 @@ header {
     font-weight: bold;
 }
 
+.site-header .logo a {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+
 
 
 /* NAV LINKS */
