--- a/recipe-book/src/app/core/header/header.component.html
+++ b/recipe-book/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <section class="site-header">
-        <p class="logo">RecipeBook.</p>
+        <p class="logo"><a routerLink="/home">RecipeBook.</a></p>
     </section>
     <nav *ngIf="isLogged">
         <ul>
