--- a/recipe-book/src/styles.css
+++ b/recipe-book/src/styles.css
@@ -74,4 +74,11 @@ h6 {
 
 body {
     min-height: 100vh;
+    position: relative;
+    padding-bottom: 100px;
+}
+
+main {
+    max-width: 80vw;
+    margin: 0 auto;
 }
