--- a/recipe-book/src/app/error-page/error-page.component.css
+++ b/recipe-book/src/app/error-page/error-page.component.css
@@ -1,4 +1,4 @@
-main {
+.error-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,7 +6,7 @@ main {
 
 .error-page {
     border: 2px solid #f68235;
-    font-size: 2em;
+    font-size: 1.5em;
     padding: 1em 2em;
     margin-top: 2em;
     border-radius: 0.2em;
@@ -34,4 +34,17 @@ main {
     color: white;
     text-shadow: 0 0 5px #ffffff;
     transition: all 0.2s ease-in;
+}
+
+
+@media (min-width:600px) {
+    .error-page {
+        font-size: 2em;
+    }
+}
+
+@media (min-width:1000px) {
+    .error-page {
+        font-size: 2.5em;
+    }
 }
