--- a/recipe-book/src/app/error-page/error-page.component.html
+++ b/recipe-book/src/app/error-page/error-page.component.html
@@ -1,6 +1,8 @@
-<main>
-    <div class="error-page">
-        <p>Page not found</p>
-        <a routerLink="/home">Home</a>
+<div class="container">
+    <div class="error-wrapper">
+        <div class="error-page">
+            <p>Page not found</p>
+            <a routerLink="/home">Home</a>
+        </div>
     </div>
-</main>
+</div>
