--- a/recipe-book/src/app/home/home.component.html
+++ b/recipe-book/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<main>
+<div class="container">
     <div class="banner site">
         <h1>Your favourite recipes <br> in one place for <span>free.</span></h1>
         <p>Discover delicious new recipes that inspire your menus.</p>
@@ -17,4 +17,4 @@
             <div class="card"></div>
         </div>
     </div>
-</main>
+</div>
