--- a/recipe-book/src/app/core/header/header.component.html
+++ b/recipe-book/src/app/core/header/header.component.html
@@ -4,16 +4,28 @@
     </section>
     <nav *ngIf="isLogged">
         <ul>
-            <li><a href="">Recipes</a></li>
-            <li><a href="">Profile</a></li>
-            <li><a href="">Log out</a></li>
+            <li>
+                <a routerLink="/recipes">Recipes</a>
+            </li>
+            <li>
+                <a routerLink="/profile">Profile</a>
+            </li>
+            <li>
+                <a href="">Log out</a>
+            </li>
         </ul>
     </nav>
     <nav *ngIf="!isLogged">
         <ul>
-            <li><a href="">Recipes</a></li>
-            <li><a href="">Login</a></li>
-            <li><a href="">Register</a></li>
+            <li>
+                <a routerLink="/recipes">Recipes</a>
+            </li>
+            <li>
+                <a routerLink="/login">Login</a>
+            </li>
+            <li>
+                <a routerLink="/register">Register</a>
+            </li>
         </ul>
     </nav>
 
