--- a/recipe-book/src/app/home/home.component.html
+++ b/recipe-book/src/app/home/home.component.html
@@ -9,12 +9,16 @@
             <h2 class="title">Top Recipes</h2>
         </div>
         <div class="cards">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card" *ngFor="let recipe of recipes">
+                <div class="media">
+                    <img *ngIf="recipe.img.length > 1" src={{recipe.img}} alt="">
+                    <img *ngIf="recipe.img < 1" src='../../assets/no-image.jpg' alt="">
+                    <p class="category">{{recipe.category}}</p>
+                </div>
+                <div class="recipe-title">
+                    <p>{{recipe.name}}</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
