--- a/recipe-book/src/app/recipe/current-recipe/current-recipe.component.css
+++ b/recipe-book/src/app/recipe/current-recipe/current-recipe.component.css
@@ -11,6 +11,13 @@
 }
 
 
+.loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .details .media {
     flex: 1 1 30%;
     display: flex;
@@ -58,6 +65,7 @@
     border: 2px solid #f68235;
     border-radius: 0.3em;
     background-color: #f6f5f5;
+    gap: 1em;
 }
 
 
@@ -87,8 +95,6 @@
     flex-direction: column;
     align-items: center;
 }
-
-
 
 
 
