--- a/recipe-book/src/app/user/login/login.component.html
+++ b/recipe-book/src/app/user/login/login.component.html
@@ -1,1 +1,34 @@
-<p>login works!</p>
+<div class="container">
+    <div class="form-wrapper">
+        <div class="title">
+            <h2>Login Form</h2>
+        </div>
+        <form #form="ngForm" (ngSubmit)="login(form)">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" placeholder="enter your email..." ngModel
+                    #inputEmail="ngModel" required appEmail>
+
+                <ng-container *ngIf="inputEmail.touched">
+                    <p class="error" *ngIf="inputEmail.errors?.['required']">Email is required!</p>
+                    <p class="error" *ngIf="inputEmail.errors?.['invalidEmail'] && inputEmail.value.length > 0">Email is
+                        invalid!</p>
+                </ng-container>
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" placeholder="enter your password..." ngModel
+                    #inputPassword="ngModel" required minlength="4">
+
+                <ng-container *ngIf="inputPassword.touched">
+                    <p class="error" *ngIf="inputPassword.errors?.['required']">Password is required!</p>
+                    <p class="error" *ngIf="inputPassword.errors?.['minlength']">Password must be at least 4 characters!
+                    </p>
+                </ng-container>
+            </div>
+            <button>Login</button>
+            <p class="text">Don't have an account?<a routerLink="/register">Register</a></p>
+        </form>
+    </div>
+</div>
