--- a/recipe-book/src/app/user/login/login.component.html
+++ b/recipe-book/src/app/user/login/login.component.html
@@ -27,7 +27,7 @@
                     </p>
                 </ng-container>
             </div>
-            <button>Login</button>
+            <button [disabled]="form.invalid">Login</button>
             <p class="text">Don't have an account?<a routerLink="/register">Register</a></p>
         </form>
     </div>
