Added styles to Profile View

--- a/recipe-book/src/app/user/profile/profile.component.html
+++ b/recipe-book/src/app/user/profile/profile.component.html
@@ -1,1 +1,22 @@
-<p>profile works!</p>
+<div class="container">
+    <div class="profile-wrapper">
+        <div class="media">
+            <img src="../../../assets/profile-icon-png-899.png" alt="">
+        </div>
+        <div class="info">
+            <h1>User Info</h1>
+            <div class="content">
+                <p>Username: <span>Joro765</span></p>
+                <p>Email: <span>jorogeorgiev765@gmail.com</span></p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="container">
+    <h2>Manage Your Recipes</h2>
+    <div class="empty-msg">
+        <h3>You have not uploaded any recipes yet!</h3>
+    </div>
+</div>
