Added pipe to recipe name in template
Added pipe that shortens the recipe name when desplayed in card if it's longer than 20 characters.

--- a/recipe-book/src/app/home/home.component.html
+++ b/recipe-book/src/app/home/home.component.html
@@ -19,7 +19,7 @@
                     <p class="category">{{recipe.category}}</p>
                 </div>
                 <div class="recipe-title">
-                    <p>{{recipe.name}}</p>
+                    <p>{{(recipe.name.length > 20)? (recipe.name | slice:0:20) + "...":(recipe.name)}}</p>
                 </div>
             </div>
         </div>
