--- a/recipe-book/src/app/recipe/current-recipe/current-recipe.component.css
+++ b/recipe-book/src/app/recipe/current-recipe/current-recipe.component.css
@@ -103,6 +103,32 @@
 }
 
 
+.buttons {
+    margin-bottom: 3em;
+    font-size: 1.2em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 3em;
+    align-items: center;
+}
+
+
+.buttons button {
+    background-color: #f68235;
+    color: white;
+    border-radius: 0.3em;
+    border-color: #f68235;
+    padding: 0.2em 1.2em;
+}
+
+
+.buttons button:hover {
+    text-shadow: 0 0 5px #ffffff;
+    transition: all 0.2s ease-in;
+    cursor: pointer;
+}
+
 
 @media (min-width:800px) {
     .details {
