--- a/recipe-book/src/app/user/profile/profile.component.css
+++ b/recipe-book/src/app/user/profile/profile.component.css
@@ -58,6 +58,10 @@
 
 /* YOUR RECIPES MSG */
 
+.container h2 {
+    margin-bottom: 1em;
+}
+
 .empty-msg {
     font-size: 0.8em;
     font-style: italic;
@@ -70,7 +74,94 @@
 
 /* YOUR RECIPES CARDS */
 
-/* TODO */
+/* CARDS */
+
+
+.cards-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 3em;
+}
+
+.cards-wrapper .title {
+    color: #f68235;
+    font-size: 1.2em;
+    margin-bottom: 0.5em;
+}
+
+
+
+.cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+}
+
+.card {
+    background-color: #f68235;
+    width: 200px;
+    height: 200px;
+    border-radius: 0.3em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    box-shadow: 0 0 1em 0.3em rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    font-size: 0.6em;
+}
+
+
+.card:hover {
+    cursor: pointer;
+    box-shadow: 0 0 1em 0.3em rgba(0, 0, 0, 0.1);
+    transition: all 0.3s;
+}
+
+.card:hover .recipe-title {
+    transition: all 0.3s;
+    letter-spacing: 0.2em;
+}
+
+
+.card:not(hover) .recipe-title {
+    transition: all 0.3s;
+    letter-spacing: 0;
+}
+
+
+
+
+/* CARD CONTENT */
+
+.card .category {
+    border: 1px solid #333333e6;
+    background-color: white;
+    color: #333333e6;
+    border-radius: 0.4em;
+    padding: 0.1em 0.4em;
+    position: absolute;
+    right: 0.5em;
+    top: 0.5em;
+}
+
+.card .recipe-title {
+    color: #333333e6;
+    text-align: center;
+    flex: 0 1 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card .media {
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 
@@ -81,6 +172,23 @@
 
     .info h1 {
         font-size: 2em;
+    }
+
+    .cards.wrapper {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .card {
+        background-color: #f68235;
+        width: 250px;
+        height: 250px;
+        font-size: 1em;
+    }
+
+    .cards-wrapper .title {
+        font-size: 1.5em;
     }
 }
 
@@ -93,9 +201,17 @@
         align-items: flex-start;
     }
 
-    .media {
-        padding: 1em;
-        border-right: 2px solid #ccc;
+    .cards {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 2em;
+    }
+
+
+    .title-wrapper {
+        margin-bottom: 1.5em;
+        font-size: 1.5em;
     }
 }
 
@@ -108,5 +224,18 @@
 
     .info h1 {
         font-size: 2.5em;
+    }
+
+    .cards {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 2em;
+    }
+
+
+    .title-wrapper {
+        margin-bottom: 1.5em;
+        font-size: 1.5em;
     }
 }
