--- a/recipe-book/src/app/recipe/current-recipe/current-recipe.component.html
+++ b/recipe-book/src/app/recipe/current-recipe/current-recipe.component.html
@@ -35,7 +35,7 @@
 
     <div class="buttons" *ngIf="isOwner">
         <button class="edit">Edit</button>
-        <button class="delete">Delete</button>
+        <button class="delete" (click)="deleteRecipe()">Delete</button>
     </div>
 
 
