--- a/recipe-book/src/app/recipe/current-recipe/current-recipe.component.css
+++ b/recipe-book/src/app/recipe/current-recipe/current-recipe.component.css
@@ -8,6 +8,7 @@
     gap: 2em;
     color: #333333e6;
     margin-bottom: 3em;
+
 }
 
 
@@ -40,8 +41,18 @@
 .info h3 {
     text-align: center;
     font-weight: bold;
+    max-width: 50ch;
+    word-wrap: break-word;
+    margin: 0 auto;
 }
 
+
+.info p {
+    max-width: 50ch;
+    word-wrap: break-word;
+    text-align: center;
+    margin: 0 auto;
+}
 
 .icons {
     padding-top: 2em;
@@ -130,7 +141,7 @@
 }
 
 
-@media (min-width:800px) {
+@media (min-width:1100px) {
     .details {
         flex-direction: row;
         flex-wrap: nowrap;
@@ -143,14 +154,14 @@
 
     .instructions {
         flex-direction: row;
-        max-width: 60%;
+        max-width: 70%;
     }
 
 
 }
 
 
-@media (min-width:1000px) {
+@media (min-width:1200px) {
     .details {
         flex-direction: row;
         flex-wrap: nowrap;
@@ -169,7 +180,7 @@
 }
 
 
-@media (min-width:1200px) {
+@media (min-width:1300px) {
     .details .media {
         justify-content: flex-start;
     }
@@ -178,6 +189,5 @@
     .details .media img {
         max-width: 400px;
     }
-
 
 }
